--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -12,12 +12,14 @@
     <!-- CSS -->
     <link rel="stylesheet" href="css/style.css">
     <!-- Font Awesome -->
-    <script src="https://kit.fontawesome.com/c742a003d1.js" crossorigin="anonymous"></script>
+    <script defer src="https://kit.fontawesome.com/c742a003d1.js" crossorigin="anonymous"></script>
+
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" id="text-fresh-cart" href="#"><i
                     class="fa-solid fa-store icone-freshcart"></i>FreshCart</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -66,7 +68,7 @@
 
         <section class="container home-pages">
             <div class="cabecalho-home-pages">
-                <p class="textos-cabecalho-hp">Ready-to-Use</p>
+                <p class="textos-cabecalho-hp m-0">Ready-to-Use</p>
                 <h3 class="textos-cabecalho-hp">Home Pages</h3>
                 <p class="textos-cabecalho-hp-p">Ready to create the best ecommerce website? Our Unique homepage
                     design<br> help you to build a ecommerce business easily.
@@ -76,21 +78,24 @@
 
             <div class="row">
                 <article class="card col-lg-4 home-pages-row">
-                    <img src="img/home_pages/gimp/hm1.jpg" class="card-img-top imagem-home-pages" alt="...">
+                    <img src="img/home_pages/gimp/hm1.jpg" class="card-img-top imagem-home-pages"
+                        alt="homem lendo um livro encostado em uma estante de livros">
                     <div class="card-body">
                         <h5 class="card-title">Home Page 1</h5>
                     </div>
                 </article>
 
                 <article class="card col-lg-4 home-pages-row">
-                    <img src="img/home_pages/gimp/hm2.jpg" class="card-img-top imagem-home-pages" alt="...">
+                    <img src="img/home_pages/gimp/hm2.jpg" class="card-img-top imagem-home-pages"
+                        alt="homem e criança jogando a bola um para outro">
                     <div class="card-body">
                         <h5 class="card-title">Home Page 2</h5>
                     </div>
                 </article>
 
                 <article class="card col-lg-4 home-pages-row">
-                    <img src="img/home_pages/gimp/hm3.jpg" class="card-img-top imagem-home-pages" alt="...">
+                    <img src="img/home_pages/gimp/hm3.jpg" class="card-img-top imagem-home-pages"
+                        alt="mulher, homem e criança fazendo/desfazendo uma mudança">
                     <div class="card-body">
                         <h5 class="card-title">Home Page 3</h5>
                     </div>
@@ -102,14 +107,15 @@
         <section class="features">
 
             <div class="cabecalho-features">
-                <p class="paragrafo-features">eCommerce design</p>
+                <p class="paragrafo-features m-0">eCommerce design</p>
                 <h3 class="titulos-h3">Features</h3>
             </div>
 
             <article class="article-features">
                 <div class="div-imagem-feature">
-                    <img src="img/features/gimp/img2.jpg" class="imagem-feature" id="img-feature-um" alt="">
-                    <div>
+                    <img src="img/features/gimp/img2.jpg" class="imagem-feature" id="img-feature-um"
+                        alt="mulher com uma sacola na mão em um corredor de mercado fazendo compras">
+                    <div class="category-drop-down">
                         <h4>Category Dropdown</h4>
                         <p>Category dropdown plugin is a simple plugin that displays the <br> parent and the child
                             categories
@@ -125,11 +131,14 @@
                             your
                             store. <br> Filters allow them to shortlist products based on <br> their parameters</p>
                     </div>
-                    <img src="img/features/gimp/img4.jpg" class="imagem-feature" alt="">
+                    <img src="img/features/gimp/img4.jpg" class="imagem-feature"
+                        alt="homem com carrinho de compras e mulher segurando um legume, ambos no mercado.">
                 </div>
 
                 <div class="div-imagem-feature">
-                    <img src="img/features/gimp/img3.jpg" alt="" class="imagem-feature">
+                    <img src="img/features/gimp/img3.jpg"
+                        alt="carrinho de supermercado cheio de produtos, pai e filho atrás da imagem."
+                        class="imagem-feature">
                     <div class="div-img-ftr">
                         <h4>Mini Cart</h4>
                         <p>Provide visual feedback when the user adds an item to their <br> cart, and the mini cart does
@@ -142,12 +151,14 @@
 
                 <div class="div-im div-imagem-feature">
                     <div class="div-im-um">
-                        <h4>Quick Product View</h4>
-                        <p>Quickview, site users can see product details and <br> images through an overlay window while
+                        <h4 class="m-0">Quick Product View</h4>
+                        <p class="m-0">Quickview, site users can see product details and <br> images through an overlay
+                            window while
                             on a <br> product listing page. This way, they can now see <br> all the details of a product
                             & faster way to check out products.</p>
                     </div>
-                    <img src="img/features/gimp/img5.jpg" class="imagem-feature" alt="">
+                    <img src="img/features/gimp/img5.jpg" class="imagem-feature"
+                        alt="homem em uma loja de eletrônicos olhando produtos">
                 </div>
             </article>
 
@@ -155,7 +166,7 @@
 
         <section class="container shop-pages">
             <div class="cabecalho-shop-pages">
-                <p>Ready-to-Use</p>
+                <p class="m-0">Ready-to-Use</p>
                 <h4>Shop Pages</h4>
                 <p>Ready to create the best ecommece website? Our Unique homepage design <br>help you to build a
                     ecommerce business easily.</p>
@@ -164,21 +175,21 @@
             <div class="row shop-pages-row">
 
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img7.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img7.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shop Grid Filter</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img8.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img8.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shop List Filter</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img9.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img9.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shop Wide</h5>
                     </div>
@@ -188,21 +199,21 @@
 
             <div class="row shop-pages-row">
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img10.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img10.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shop Single</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img11.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img11.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shopping Cart</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-shop-pages col-lg-4 col-md-4">
-                    <img src="img/shop_pages/gimp/img12.jpg" alt="" class="card-img-top">
+                    <img src="img/shop_pages/gimp/img12.jpg" alt="panfleto de supermercado" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Shop Top Filter</h5>
                     </div>
@@ -214,7 +225,7 @@
 
         <section class="container multi-vendors">
             <div class="cabecalho-multi-vendors">
-                <p>Stores Design</p>
+                <p class="m-0">Stores Design</p>
                 <h4>Multi Vendors</h4>
                 <p>If you want to create your own eCommerce marketplace for multivendor, these <br> stores UI design
                     will help you get started</p>
@@ -222,21 +233,26 @@
 
             <div class="row multi-vendors-row">
                 <article class="card cartas-multi-vendors col-lg-4">
-                    <img src="img/multi_vendors/gimp/img1.jpg" alt="" class="card-img-top">
+                    <img src="img/multi_vendors/gimp/img1.jpg"
+                        alt="um braço segurando um saco de feira com legumes e verduras" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Store Grid</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-multi-vendors col-lg-4">
-                    <img src="img/multi_vendors/gimp/img2.jpg" alt="" class="card-img-top">
+                    <img src="img/multi_vendors/gimp/img2.jpg"
+                        alt="carrinho de supermercado pequeno em uma mesada de madeira, notebook atrás do carrinho."
+                        class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Store List</h5>
                     </div>
                 </article>
 
                 <article class="card cartas-multi-vendors col-lg-4">
-                    <img src="img/multi_vendors/gimp/img3.jpg" alt="" class="card-img-top">
+                    <img src="img/multi_vendors/gimp/img3.jpg"
+                        alt="mulher com um papel e uma caneta na mão verificando os itens da compra dela."
+                        class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Store Single</h5>
                     </div>
@@ -246,7 +262,7 @@
 
         <section class="container awesome-features">
             <div class="cabecalho-awesome-features">
-                <p>Awesome</p>
+                <p class="m-0">Awesome</p>
                 <h4>Features</h4>
                 <p>We provide impressive features for your website. You can easily build your <br> store and
                     ecommerce
@@ -331,7 +347,7 @@
 
     </main>
 
-    <footer>
+    <footer class="p-5">
         <div class="div-footer">
             <h2>Build fast. Launch Faster. <br> with FreshCart Template</h2>
             <p>Start working with, the impressive design, powerful features, and easy customization <br> making website
